Following changes done :
1. Click anywhere on the map: (current behavior, no change)
    1.1 If there is no active mark on the map, place a pin/marker on the
    map to show the current selected location.
    1.2 If  there  is an active mark on the map, move the current marker
    to the new location. (Remove  the current  pin and  place one on new
    location)
2. Button “Waypoints”:  (changes)
    2.1 If the waypoint list is not  empty, it shall toggle the state of
    showing a list of waypoints and hide the list.
    2.2 If the list  is empty, shall  show an  error  message or show an
    empty list or get disabled.
3. Button “Add WayPoint”: (changes)
    3.1 If there is a selected location (active mark), add the  location
    to the waypoints list and show  the waypoint  list so that  the user
    knows it (also send onWayPointChange Notification if needed).
    3.2 If there  is no active  mark on the map, show a message ask user
    to place a mark on the map first before click the button.
4. Button “Clear”: clear all marks on the map. (new button)
5. Button “Start Animation”/”Stop Animation”: start/stop animation.
   (current behavior, no change)
6. Button “Navigate”:
    6.1 If there is a selected  location, set it as the destination (new
    last waypoint). Calculate and show the route.
    6.2 If there is no selected location, (changes) and
        6.2.1 If  the waypoint is  not empty,  set the last  waypoint as
        destination, calculate and show the route.
        6.2.2 If the waypoint is empty, show a message ask user to set a
        destination.
7. “Places” button. – not used.
8. Need to change  the inscription "Please select a WayPoint" to "Please
   select a place on the map".

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -48,7 +48,7 @@
     position: absolute;
 }
 
-.POIButton {
+.navigationButton {
     z-index: 1;
     top: 335px;
     left: 20px;
@@ -72,7 +72,7 @@
     text-align: center;
 }
 
-.navigationButton {
+.clearButton {
     z-index: 1;
     bottom: 60px;
     left: 20px;
